# mirror

./: .dockerignore  .env.example  .gitignore  API_CREDITS_AND_SERVICES.md  CLAUDE.md  Caddyfile  DEPLOY.md  Dockerfile.local  FIXES.md  HACKATHON_SUBMISSION.md  LICENSE  MIRROR_V10_MASTERPLAN.md  MOUNTAIN.md  Makefile  PR10_BACKEND_RESPONSE.md  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  test.db
backend/: Dockerfile  alembic.ini  benchmark_report_demo.md  benchmark_scores_demo.json  pyproject.toml  test.db
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_issue_tracking_and_scroll_depth.py  003_schedules_videos_fixes.py  004_add_cost_columns_to_studies.py  005_add_issue_type.py  006_widen_issue_heuristic_column.py  007_add_started_at_duration_to_studies.py  008_add_teams_preferences_favorites_study_name.py  009_add_model_to_personas.py  010_add_ux_score_to_sessions.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/browser/: __init__.py  actions.py  cookie_consent.py  detection.py  overlay_dismiss.py  pool.py  screencast.py  screenshots.py
backend/app/core/: accessibility_auditor.py  analyzer.py  benchmark.py  comparator.py  deduplicator.py  firecrawl_client.py  heatmap.py  navigator.py  orchestrator.py  persona_engine.py  prioritizer.py  report_builder.py  (+3 more)
backend/benchmark/: __main__.py  cli.py  run_demo.py
backend/cli/: mirror_cli.py  setup.py
backend/demo_site/: app.py
backend/scripts/: dev_worker.py  monitor_study_events.py
backend/tests/: conftest.py
(+333 files in other folders)
